--- a/public/common.css
+++ b/public/common.css
@@ -130,6 +130,7 @@ div,ul{
     @media screen and (max-width: 1440px){
       .w1440{
         padding: 0;
+        padding-bottom: 200px;
       }
     }
 
